<resources>
    <string name="app_name">Shiristory</string>
    <string name="title_story">Stories</string>
    <string name="title_contact">Contacts</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Change profile picture</string>
    <string name="update_profile">Update</string>
    <string name="post_comment_hint">Write a comment...</string>

    <string name="play_audio">Play audio</string>
    <string name="stop_audio">Stop audio</string>
    <string name="msg_hint">What happens next?</string>

    <string name="post_add">Add post</string>
    <string name="post_submit">Submit</string>
    <string name="post_add_title">Create post</string>
    <string name="post_add_hint">What\'s your story?</string>
    <string name="post_add_select_media">Photo/Video</string>

    <string name="contact_default_friend_name">Elon Musk</string>
    <string name="contact_add_friend">Add friend</string>
    <string name="contact_search_friend">Find friend</string>
    <string name="contact_operation_cancel">Cancel</string>
    <string name="contacts_result">Friend list</string>
    <string name="contacts_search">Search result</string>
    <string name="contacts_all">All friends</string>

    <string name="login_username">Your username</string>
    <string name="login_password">Your password</string>
    <string name="goto_sign_up">Sign up</string>

    <string name="sign_up_username_hint">New username</string>
    <string name="sign_up_password_hint">New password</string>
    <string name="sign_up_email_hint">New email</string>
    <string name="sign_up_cancel">Cancel</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="story_members">Members</string>
    <string name="story_goto_settings">story_goto_settings</string>
    <string name="story_admins">Admins</string>
    <string name="group_leave_group">Leave Group</string>
    <string name="group_create_group">Create Group</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!-- Shared Preferences Key -->
    <string name="jwt_access_key">jwt_access</string>
    <string name="jwt_refresh_key">jwt_refresh</string>
</resources>