<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_story">

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.example.shiristory.ui.story.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.shiristory.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.example.shiristory.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.shiristory.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>