<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/sign_up_username_hint"
            android:paddingLeft="10dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/sign_up_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />


        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="signUp"
            android:text="Sign up"
            android:textColor="@android:color/white"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/blue_normal"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="Success"
            app:pb_textError="Error"
            app:pb_textProgress="Loading" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/sign_up_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="cancelSignUp"
            android:text="@string/sign_up_cancel"
            android:textColor="@android:color/white"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/red_error"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="Success"
            app:pb_textError="Error"
            app:pb_textProgress="Loading" />



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>